Fix links in HTML file, edit styling for readability

--- a/main.css
+++ b/main.css
@@ -86,5 +86,9 @@ html {
 }
 
 .right > h4 {
-    font-size: 17px;
+    font-size: 15px;
+}
+
+.directions {
+    line-height: 25px;
 }
